crates/nash-can/tests/snapshots/traits__default_body_checks_nested_annotation_kinds.snap
---
source: crates/nash-can/tests/traits.rs
description: "module Main exposing (..)\nimport Primitive exposing (..)\nimport Builtin exposing (..)\n\ntrait Keep 'a where\n    keep : 'a -> 'a\n    keep x =\n        let\n            bad : list ('b -> 'b)\n            bad = []\n        in\n        x\n"
info: diagnostic
---
nash::names::representation_mismatch

  × This position requires `Storable` in the annotation for `bad`:
    ╭─[src/Main.nash:9:25]
  8 │         let
  9 │             bad : list ('b -> 'b)
    ·                         ────────
 10 │             bad = []
    ╰────
  help: The type has `Term` representation, but `Storable` admits Big or Const types.
        Change the type or the representation requirement.
