crates/nash-can/tests/snapshots/traits__default_parameter_cannot_shadow_local_method.snap
---
source: crates/nash-can/tests/traits.rs
description: "module Main exposing (..)\n\ntrait Keep 'a where\n    keep : 'a -> 'a\n    keep keep = keep\n"
---
[
    Shadowing {
        name: "keep",
        original: Region {
            start: Position {
                line: 4,
                column: 5,
            },
            end: Position {
                line: 4,
                column: 9,
            },
        },
        new: Region {
            start: Position {
                line: 5,
                column: 10,
            },
            end: Position {
                line: 5,
                column: 14,
            },
        },
    },
]
