crates/nash-can/tests/snapshots/traits__imported_trait_and_method_ambiguity.snap
---
source: crates/nash-can/tests/traits.rs
description: "module A exposing (Keep)\n\ntrait Keep 'a where\n    keep : 'a -> 'a\n\n\nmodule B exposing (Keep)\n\ntrait Keep 'a where\n    keep : 'a -> 'a\n\n\nmodule Main exposing (..)\nimport A exposing (Keep)\nimport B exposing (Keep)\n\nf : Keep 'a => 'a -> 'a\nf x = x\n\n\nmodule Main exposing (..)\nimport A exposing (Keep)\nimport B exposing (Keep)\n\nf x = keep x\n"
info: diagnostic
---
nash::names::ambiguous_trait

  × Ambiguous trait `Keep`.
   ╭─[src/Main.nash:5:5]
 4 │ 
 5 │ f : Keep 'a => 'a -> 'a
   ·     ────
 6 │ f x = x
   ╰────
  help:     A.Keep
            B.Keep

        Use a qualified name.

nash::names::ambiguous_var

  × Ambiguous variable `keep`.
   ╭─[src/Main.nash:5:7]
 4 │ 
 5 │ f x = keep x
   ·       ────
   ╰────
  help:     A.keep
            B.keep

        Use a qualified name.
