crates/nash-can/tests/snapshots/traits__method_predicate_checks_argument_kind.snap
---
source: crates/nash-can/tests/traits.rs
description: "module Main exposing (..)\nimport Primitive exposing (..)\nimport Builtin exposing (..)\n\ntrait BigOnly ('a : Big) where\n    bigOnly : 'a -> 'a\n\ntrait Uses 'a where\n    use : BigOnly int => 'a -> 'a\n"
info: diagnostic
---
nash::names::representation_mismatch

  × This position requires `Big` in the annotation for `use`:
   ╭─[src/Main.nash:9:19]
 8 │ trait Uses 'a where
 9 │     use : BigOnly int => 'a -> 'a
   ·                   ───
   ╰────
  help: The type has `Const` representation, but `Big` admits only Big types. Change the
        type or the representation requirement.
