crates/nash-can/tests/snapshots/traits__method_quantifiers_have_independent_kinds.snap
---
source: crates/nash-can/tests/traits.rs
description: "module Main exposing (..)\n\ntrait Carry 'a where\n    ordinary : 'a -> List 'b -> 'a\n    higher : 'a -> 'b 'c -> 'a\n"
---
(
    [
        Type,
    ],
    [
        (
            "ordinary",
            [
                "a",
                "b",
            ],
            [
                Trait {
                    trait_: QualifiedName {
                        home: ModuleName {
                            package: None,
                            name: "Main",
                        },
                        name: "Carry",
                    },
                    args: [
                        Located {
                            region: Region {
                                start: Position {
                                    line: 3,
                                    column: 13,
                                },
                                end: Position {
                                    line: 3,
                                    column: 15,
                                },
                            },
                            value: Var(
                                "a",
                            ),
                        },
                    ],
                },
                Implied {
                    trait_: QualifiedName {
                        home: ModuleName {
                            package: Some(
                                PackageName {
                                    author: "nash",
                                    project: "base",
                                },
                            ),
                            name: "Primitive",
                        },
                        name: "Big",
                    },
                    args: [
                        Located {
                            region: Region {
                                start: Position {
                                    line: 4,
                                    column: 27,
                                },
                                end: Position {
                                    line: 4,
                                    column: 29,
                                },
                            },
                            value: Var(
                                "b",
                            ),
                        },
                    ],
                },
            ],
        ),
        (
            "higher",
            [
                "a",
                "b",
                "c",
            ],
            [
                Trait {
                    trait_: QualifiedName {
                        home: ModuleName {
                            package: None,
                            name: "Main",
                        },
                        name: "Carry",
                    },
                    args: [
                        Located {
                            region: Region {
                                start: Position {
                                    line: 3,
                                    column: 13,
                                },
                                end: Position {
                                    line: 3,
                                    column: 15,
                                },
                            },
                            value: Var(
                                "a",
                            ),
                        },
                    ],
                },
                Apply {
                    head: Located {
                        region: Region {
                            start: Position {
                                line: 5,
                                column: 20,
                            },
                            end: Position {
                                line: 5,
                                column: 22,
                            },
                        },
                        value: Var(
                            "b",
                        ),
                    },
                    args: [
                        Located {
                            region: Region {
                                start: Position {
                                    line: 5,
                                    column: 23,
                                },
                                end: Position {
                                    line: 5,
                                    column: 25,
                                },
                            },
                            value: Var(
                                "c",
                            ),
                        },
                    ],
                },
            ],
        ),
    ],
)
