crates/nash-can/tests/snapshots/traits__method_requires_each_trait_parameter.snap
---
source: crates/nash-can/tests/traits.rs
description: "module Main exposing (..)\n\ntrait Convert 'a 'b where\n    convert : 'a -> 'a\n"
---
[
    MethodMissingParameter {
        region: Region {
            start: Position {
                line: 4,
                column: 5,
            },
            end: Position {
                line: 4,
                column: 12,
            },
        },
        method: "convert",
        parameter: "b",
    },
]
