crates/nash-can/tests/snapshots/traits__methods_share_the_module_value_namespace.snap
---
source: crates/nash-can/tests/traits.rs
description: "module Main exposing (..)\n\ntrait First 'a where\n    duplicate : 'a -> 'a\n\ntrait Second 'a where\n    duplicate : 'a -> 'a\n"
info: diagnostic
---
nash::names::duplicate_method

  × This trait has multiple `duplicate` methods.
   ╭─[src/Main.nash:7:5]
 3 │ trait First 'a where
 4 │     duplicate : 'a -> 'a
   ·     ────┬────
   ·         ╰── first definition
 5 │ 
 6 │ trait Second 'a where
 7 │     duplicate : 'a -> 'a
   ·     ────┬────
   ·         ╰── and another first definition
   ╰────
  help: Rename one of the definitions.
