crates/nash-can/tests/snapshots/traits__mutually_referencing_method_contexts_are_not_superclass_cycles.snap
---
source: crates/nash-can/tests/traits.rs
expression: schemes
---
[
    (
        "First",
        KindScheme {
            bounds: [
                KindSet(
                    7,
                ),
            ],
            kind: Arrow(
                Var(
                    0,
                ),
                Base(
                    Term,
                ),
            ),
            applications: [],
        },
    ),
    (
        "Second",
        KindScheme {
            bounds: [
                KindSet(
                    7,
                ),
            ],
            kind: Arrow(
                Var(
                    0,
                ),
                Base(
                    Term,
                ),
            ),
            applications: [],
        },
    ),
]
