crates/nash-can/tests/snapshots/traits__private_trait_metadata_does_not_expose_names.snap
---
source: crates/nash-can/tests/traits.rs
description: "module Identity exposing (Keep)\n\ntrait Hidden ('a : Big) where\n    hidden : 'a -> 'a\n\ntrait Hidden 'a => Keep 'a where\n    keep : 'a -> 'a\n\n\nmodule Main exposing (..)\nimport Identity exposing (Keep)\n\ntrait Keep 'a => Child 'a where\n    child : 'a -> 'a\n\n\nmodule Main exposing (..)\nimport Identity exposing (..)\n\nf : Identity.Hidden 'a => 'a -> 'a\nf x = x\n\n\nmodule Main exposing (..)\nimport Identity exposing (..)\n\nf x = Identity.hidden x\n"
info: diagnostic
---
nash::names::not_found_trait

  × Unknown trait `Identity.Hidden`.
   ╭─[src/Main.nash:4:5]
 3 │ 
 4 │ f : Identity.Hidden 'a => 'a -> 'a
   ·     ───────────────
 5 │ f x = x
   ╰────
  help: Import `Identity` or check its alias.

nash::names::not_found_var

  × Unknown variable `Identity.hidden`.
   ╭─[src/Main.nash:4:7]
 3 │ 
 4 │ f x = Identity.hidden x
   ·       ───────────────
   ╰────
  help: Similar names:

            Identity.keep
            Builtin.iData
            Builtin.bData
            Builtin.trace
